--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start:all": "concurrently \"ng serve mfe1\" \"ng serve shell\"",
+    "start:all": "concurrently \"ng serve mfe1\" \"ng serve mfe2\" \"ng serve shell\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular-architects/native-federation": "^18.2.1",
+    "@angular-architects/native-federation": "^18.2.3",
     "@angular/animations": "^18.2.4",
     "@angular/common": "^18.2.4",
     "@angular/compiler": "^18.2.4",
